test/bad/basic/type3.px

if false do
    skip
elif false or 0 do
    skip
